--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,7 @@ anyhow = "1"
 
 eframe = "0.19"
 egui_file = "0.3"
-tokio = { version = "1", features = ["full"] }
-
+windows-hotkeys = "0.1"
 
 #[[bin]]
 #name = "demo"
