--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ build = "build.rs"
 chrono = "0.4"
 
 midly = "0.5"
-enigo = { path = "src/enigo" }
+enigo = { git = "https://github.com/Ykong1337/enigo.git" }
 anyhow = "1"
 
 eframe = "0.19"
