--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ chrono = "0.4"
 midly = "0.5"
 enigo = { git = "https://github.com/Ykong1337/enigo.git" }
 anyhow = "1"
+rayon = "1"
 
 eframe = "0.19"
 egui_file = "0.3"
