--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ rayon = "1"
 
 image = "0.24"
 eframe = "0.20"
-egui_file = "0.5"
+rfd = "0.10"
 windows-hotkeys = "0.1"
 
 [target.'cfg(target_os="windows")'.build-dependencies]
