--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ anyhow = "1"
 rayon = "1"
 
 image = "0.24"
-eframe = "0.20"
+eframe = { version = "0.21", default-features = false, features = ["wgpu"] }
 rfd = "0.11"
 windows-hotkeys = "0.1"
 
@@ -26,3 +26,6 @@ winres = "0.1"
 [[bin]]
 name = "lyred"
 path = "src/lyred.rs"
+
+[profile.release]
+lto = true
