--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,16 @@ build = "build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
 chrono = "0.4"
-
 midly = "0.5"
 rdev = "0.5"
 rayon = "1"
-
 image = "0.24"
 eframe = { version = "0.21", default-features = false, features = ["wgpu"] }
 rfd = "0.11"
-windows-hotkeys = "0.1"
+windows-hotkeys = "0.2"
+once_cell = "1"
+portable-atomic = { version = "1", features = ["float"] }
 
 [target.'cfg(target_os="windows")'.build-dependencies]
 winres = "0.1"
