--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rfd = "0.11"
 windows-hotkeys = "0.2"
 once_cell = "1"
 portable-atomic = { version = "1", features = ["float"] }
+font-kit = "0.11"
 
 [target.'cfg(target_os="windows")'.build-dependencies]
 winres = "0.1"
