--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ midly = "0.5"
 rdev = "0.5"
 rayon = "1"
 image = "0.24"
-eframe = { version = "0.21", default-features = false, features = ["wgpu"] }
+eframe = "0.22"
 rfd = "0.11"
 windows-hotkeys = "0.2"
 once_cell = "1"
@@ -21,10 +21,6 @@ font-kit = "0.11"
 
 [target.'cfg(target_os="windows")'.build-dependencies]
 winres = "0.1"
-
-[[bin]]
-name = "lyred"
-path = "src/lyred.rs"
 
 [profile.release]
 lto = true
