--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,9 @@ once_cell = "1"
 portable-atomic = { version = "1", features = ["float"] }
 font-kit = "0.11"
 
-[target.'cfg(target_os="windows")'.build-dependencies]
+[build-dependencies]
 winres = "0.1"
+embed-resource = "2"
 
 [profile.release]
 lto = true
