--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,8 @@ winres = "0.1"
 embed-resource = "2"
 
 [profile.release]
+panic = "abort"
+codegen-units = 1
 lto = true
+incremental = false
+opt-level = "s"
