--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ build = "build.rs"
 [dependencies]
 chrono = "0.4"
 midly = "0.5"
-rdev = "0.5"
 rayon = "1"
 image = "0.24"
 eframe = "0.23"
@@ -17,6 +16,8 @@ rfd = "0.12"
 once_cell = "1"
 portable-atomic = { version = "1", features = ["float"] }
 font-kit = "0.11"
+inputbot = "0.6"
+windows-hotkeys = "0.2"
 
 [build-dependencies]
 winres = "0.1"
