--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,7 @@ rfd = "0.12"
 once_cell = "1"
 portable-atomic = { version = "1", features = ["float"] }
 font-kit = "0.11"
-inputbot = "0.6"
-windows-hotkeys = "0.2"
+windows = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse"] }
 
 [build-dependencies]
 winres = "0.1"
