--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,14 @@ chrono = "0.4"
 midly = "0.5"
 rayon = "1"
 image = "0.24"
-eframe = "0.23"
+eframe = "0.24"
 rfd = "0.12"
 once_cell = "1"
 portable-atomic = { version = "1", features = ["float"] }
 font-kit = "0.11"
 windows = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse"] }
+ron = "0.8"
+serde = { version = "1", features = ["derive"] }
 
 [build-dependencies]
 winres = "0.1"
