--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ image = "0.24"
 eframe = "0.24"
 rfd = "0.12"
 once_cell = "1"
-portable-atomic = { version = "1", features = ["float"] }
-font-kit = "0.11"
+portable-atomic = { version = "1", default-features = false, features = ["float"] }
+font-kit = "0.12"
 windows = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse"] }
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
