--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,12 @@ midly = "0.5"
 rayon = "1"
 image = "0.24"
 eframe = "0.26"
-rfd = "0.13"
+rfd = "0.14"
 once_cell = "1"
-portable-atomic = { version = "1", default-features = false, features = ["float"] }
+portable-atomic = { version = "1", features = ["float"] }
+parking_lot = "0.12"
 font-kit = "0.12"
-windows = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse"] }
+windows = { version = "0.54", features = ["Win32_UI_Input_KeyboardAndMouse"] }
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
 
