--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,12 @@ image = "0.25"
 eframe = "0.27"
 rfd = "0.14"
 once_cell = "1"
-portable-atomic = { version = "1", features = ["float"] }
 parking_lot = "0.12"
 font-kit = "0.13"
 windows = { version = "0.56", features = ["Win32_UI_Input_KeyboardAndMouse"] }
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
+crossbeam = "0.8"
 
 [build-dependencies]
 embed-resource = "2"
