--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse"] }
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
 crossbeam = "0.8"
+rand = "0.8"
 
 [build-dependencies]
 embed-resource = "2"
