--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ ron = "0.8"
 serde = { version = "1", features = ["derive"] }
 crossbeam = "0.8"
 rand = "0.8"
+strum = { version = "0.26", features = ["derive"] }
 
 [build-dependencies]
 embed-resource = "3"
